--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -2,6 +2,6 @@
   <% if !notice.nil? %>
     <p class="alert alert-success"><%= notice %></p>
   <% elsif !alert.nil? %>
-    <p class="alert alert danger"><%= alert %></p>
+    <p class="alert alert-danger"><%= alert %></p>
   <% end %>
 </div>
