--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
-<% if @user.errors.any? %>
-  <div id="error_explanation">
+<% if @user.present? && @user.errors.any? %>
+  <div id="error_explanation" class='alert alert-danger'>
     <h2> <%= pluralize(@user.errors.count, "error") %> prohibited this article from being saved:</h2>
     <ul>
       <% @user.errors.full_messages.each do |msg| %>
